UV warp modifier bone fields break when bone name changed. #37612

Closed
opened 2013-11-25 05:53:35 +01:00 by Stephen Hamacek · 7 comments

System Information
Operating system and graphics card

Mac 10.7.5
NVIDIA GeForce GT 330M 512 MB

Blender Version
Broken: Blender 2.69 r60991

Short description of error
Changing name of 'From' bone of UV warp modifier doesn't update in Modifier

Exact steps for others to reproduce the error

Add UV warp modifier to default cube
Add Armature with single bone
In modifer settings, select armature and bone in 'From' field of modifier
Select armature and enter edit or pose mode
change name of bone

  • no longer corresponds with entry in modifier field.

**System Information** Operating system and graphics card Mac 10.7.5 NVIDIA GeForce GT 330M 512 MB **Blender Version** Broken: Blender 2.69 r60991 **Short description of error** Changing name of 'From' bone of UV warp modifier doesn't update in Modifier **Exact steps for others to reproduce the error** Add UV warp modifier to default cube Add Armature with single bone In modifer settings, select armature and bone in 'From' field of modifier Select armature and enter edit or pose mode change name of bone - > no longer corresponds with entry in modifier field.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @StephenHamacek

Added subscriber: @StephenHamacek

This issue was referenced by blender/blender-addons-contrib@8cb02561a9

This issue was referenced by blender/blender-addons-contrib@8cb02561a90bffa019cece9a4976ea98363c5b75

This issue was referenced by 8cb02561a9

This issue was referenced by 8cb02561a90bffa019cece9a4976ea98363c5b75

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8cb02561a9.

Closed by commit 8cb02561a9.

Well that was quick. Thanks!

Well that *was* quick. Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37612
No description provided.