Fix T37612: UV warp modifier bone name doesn't update when renamed